--- a/Week_2/Game/js_css/css.css
+++ b/Week_2/Game/js_css/css.css
@@ -56,3 +56,15 @@ img {
     height: 80%;
     background-color: #ffffff;
 }
+
+table.game tbody tr td img {
+    height: 388px;
+    padding: 2px;
+}
+
+div.win {
+    background-color: rgb(255, 130, 130);
+    width: 420px;
+    height: 400px;
+    float: left;
+}
